Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15097

ASSERTION( list_empty(&qmt->qmt_pool_list)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • Upstream
    • None
    • 3
    • 9223372036854775807

      
      Lustre: DEBUG MARKER: == ost-pools test 27: Race pool_list and pool_remove ===== 09:49:59 (1634118599)
      
      Trace:
      
      PID: 57686  TASK: ffff880122776000  CPU: 1   COMMAND: "umount"
       #0 [ffff88011750f900] panic at ffffffff810af881
          /tmp/kernel/kernel/panic.c: 265
       #1 [ffff88011750f990] qmt_pool_fini at ffffffffa09d7126 [lquota]
          /home/lustre/master-mine/lustre/quota/qmt_pool.c: 462
       #2 [ffff88011750f9b8] qmt_device_fini at ffffffffa09c2174 [lquota]
          /home/lustre/master-mine/lustre/quota/qmt_dev.c: 104
       #3 [ffff88011750f9d0] class_cleanup at ffffffffa017e483 [obdclass]
          /home/lustre/master-mine/lustre/include/obd_class.h: 597
       #4 [ffff88011750fa48] class_process_config at ffffffffa017f81a [obdclass]
          /home/lustre/master-mine/libcfs/include/libcfs/libcfs_debug.h: 154
       #5 [ffff88011750faf8] class_manual_cleanup at ffffffffa018299c [obdclass]
          /home/lustre/master-mine/lustre/obdclass/obd_config.c: 2277
       #6 [ffff88011750fb90] qmt_device_obd_disconnect at ffffffffa09c1e86 [lquota]
          /home/lustre/master-mine/libcfs/include/libcfs/libcfs_debug.h: 154
       #7 [ffff88011750fba8] mdt_device_fini at ffffffffa0c95853 [mdt]
          /home/lustre/master-mine/libcfs/include/libcfs/libcfs_debug.h: 154
       #8 [ffff88011750fc00] class_cleanup at ffffffffa017e756 [obdclass]
          /home/lustre/master-mine/lustre/include/obd_class.h: 598
       #9 [ffff88011750fc78] class_process_config at ffffffffa017f81a [obdclass]
          /home/lustre/master-mine/libcfs/include/libcfs/libcfs_debug.h: 154
      #10 [ffff88011750fd28] class_manual_cleanup at ffffffffa018299c [obdclass]
          /home/lustre/master-mine/lustre/obdclass/obd_config.c: 2277
      #11 [ffff88011750fdc0] server_put_super at ffffffffa01bcb65 [obdclass]
          /home/lustre/master-mine/libcfs/include/libcfs/libcfs_fail.h: 79
      #12 [ffff88011750fe90] generic_shutdown_super at ffffffff811fc7df
          /tmp/kernel/./include/linux/compiler.h: 188
      #13 [ffff88011750fea8] kill_anon_super at ffffffff811fcae9
          /tmp/kernel/fs/super.c: 1047
      #14 [ffff88011750feb8] deactivate_locked_super at ffffffff811fcf34
          /tmp/kernel/fs/super.c: 333
      #15 [ffff88011750fed0] cleanup_mnt at ffffffff8121dc96
          /tmp/kernel/fs/namespace.c: 1125
      #16 [ffff88011750fee0] task_work_run at ffffffff810cebca
          /tmp/kernel/kernel/task_work.c: 115
      #17 [ffff88011750ff20] exit_to_usermode_loop at ffffffff81001d94
          /tmp/kernel/./include/linux/tracehook.h: 193
      #18 [ffff88011750ff38] do_syscall_64 at ffffffff81002603
          /tmp/kernel/arch/x86/entry/common.c: 197
      #19 [ffff88011750ff50] entry_SYSCALL_64_after_hwframe at ffffffff818000ae
          /tmp/kernel/arch/x86/entry/entry_64.S: 242
          RIP: 00007fb588e44dfb  RSP: 00007ffddcb4b5d8  RFLAGS: 00000246
          RAX: 0000000000000000  RBX: 000056404c20e400  RCX: 00007fb588e44dfb
          RDX: 0000000000000001  RSI: 0000000000000000  RDI: 000056404c2129a0
          RBP: 0000000000000000   R8: 000056404c2129c0   R9: 00007fb588ec8580
          R10: 0000000000000000  R11: 0000000000000246  R12: 000056404c2129a0
          R13: 00007fb589bf2184  R14: 000056404c20e5e0  R15: 00000000ffffffff
          ORIG_RAX: 00000000000000a6  CS: 0033  SS: 002b
      

            scherementsev Sergey Cheremencev
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: